--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,17 @@
 	"framework"
 	],
 	"authors": [
-		{
-			'name' : 'Thomas Portelange',
-			'email' : 'thomas@lekoala.be',
-			'homepage' : 'http://www.lekoala.be'
-		}
+	{
+		"name" : "Thomas Portelange",
+		"email" : "thomas@lekoala.be",
+		"homepage" : "http://www.lekoala.be"
+	}
 	],
 	"autoload": {
-        "psr-0": { "Composer": "src/" }
-    },
+		"psr-0": {
+			"Composer": "src/"
+		}
+	},
 	"require":{
 		"php":">=5.3.2"
 	}
