--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-	"name": "boomerang/clients",
-	"description": "Boomerang client module",
+	"name": "lekoala/k",
+	"description": "K framework",
 	"license": "MIT",
 	"keywords": [
-		"boomerang",
-		"clients"
+		"php",
+		"framework"
 	],
 	"authors": [
 		{
@@ -19,7 +19,7 @@
 		}
 	},
 	"require": {
-		"php": ">=5.4.*",
-		""
-	}
+		"php": ">=5.3.7",
+		"ircmaxell/password-compat": "*"
+	},
 }
