--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
 		}
 	],
 	"autoload": {
-		"psr-0": {
-			"Composer": "src/"
-		}
+		"psr-0": {"k": "src/"}
 	},
 	"require": {
 		"php": ">=5.3.7",
