--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-/nbproject/private/
+/data
+/nbproject
+/vendor
+/tmp
+/components
+/.hg
+/public/scripts/packages
+/public/scripts/components
+composer.lock
+*.DS_Store
+config.local.php
+[Tt]humbs.db
