--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 		"rhumsaa/array_column": "~1.1"
 	},
 	"suggest": {
-		"fzaninotto/faker":"*"
+		"fzaninotto/faker": "*",
+		"triplepoint/php-units-of-measure": "*"
 	}
 }
